[class 1 hw complete]

--- a/week-02/Exercise.ipynb
+++ b/week-02/Exercise.ipynb
@@ -19,14 +19,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello World\n"
+      "['a', 'b', 'c']\n",
+      "['d', 'e', 'f']\n"
      ]
     }
    ],
    "source": [
     "# Solve Alphabet slices here. \n",
-    "print(\"Hello World\")\n",
-    "\n"
+    "letters = ['a','b','c','d','e','f','g','h','i','j']\n",
+    "print(letters[0:3])\n",
+    "print(letters[3:6])\n"
    ]
   },
   {
@@ -39,21 +41,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Lil Wayne', 'Nicki Minaj', 'Drake']\n"
+     ]
+    }
+   ],
    "source": [
     "# Solve rapper names here\n",
-    "rappers = ['lil wayne', 'nicki minaj', 'drake']\n",
-    "\n",
-    "\n",
-    "\n"
+    "rappers = ['lil wayne','nicki minaj', 'drake']\n",
+    "new_list = []\n",
+    "for rapper in rappers:\n",
+    "    new_list.append(rapper.title())\n",
+    "print(new_list)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "# Problem: Write a function thats input is a number and output is:\n",
     "* Return True if the input number is even.\n",
     "* Return False if the input number is odd."
@@ -61,11 +73,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solve problem here\n"
+    "# Solve problem here\n",
+    "def even_or_odd(num: int)-> bool:\n",
+    "    if num % 2 == 0:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "print(even_or_odd(5))\n",
+    "print(even_or_odd(4))"
    ]
   },
   {
@@ -79,28 +107,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-6-6a4c39b495a9>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-6a4c39b495a9>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    list_sum = ???\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "353 35.3\n"
      ]
     }
    ],
    "source": [
     "# Solve problem here:\n",
+    "def sum_with_loop(nums : list):\n",
+    "    total = 0\n",
+    "    for num in range(len(nums)):\n",
+    "        total += nums[num]\n",
+    "    return sum\n",
     "\n",
+    "def sum_without_loop(nums : list):\n",
+    "    return sum(nums)\n",
+    "\n",
+    "def average(nums : list):\n",
+    "    return sum(nums) / len(nums)\n",
+    "    \n",
     "my_list = [1, 5, 10, 55, 88, 44, 42, 50, 20, 38]\n",
-    "list_sum = ???\n",
-    "list_avg = ???\n",
+    "list_sum = sum_without_loop(my_list)\n",
+    "list_avg = average(my_list)\n",
     "\n",
     "\n",
     "# Keep this as your last line in this cell.\n",
-    "print(list_sum, list_average)"
+    "print(list_sum, list_avg)"
    ]
   },
   {
@@ -116,11 +154,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fizz\n",
+      "buzz\n",
+      "fizzbuzz\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solve Problem fizzbuzz here:\n"
+    "# Solve Problem fizzbuzz here:\n",
+    "def fizzbuzz(num):\n",
+    "    if num % 3 == 0 and num % 5 == 0:\n",
+    "        return 'fizzbuzz'\n",
+    "    else: # if num % 3 != 0 and num % 5 != 0\n",
+    "        if num % 3 == 0:\n",
+    "            return 'fizz'\n",
+    "        elif num % 5 == 0:\n",
+    "            return 'buzz'\n",
+    "        else: # if num % 3 != 0 or num % 5 != 0\n",
+    "            return None\n",
+    "print(fizzbuzz(6))\n",
+    "print(fizzbuzz(10))\n",
+    "print(fizzbuzz(15))\n",
+    "print(fizzbuzz(1))\n"
    ]
   },
   {
@@ -139,13 +202,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Robin', 'Sara', 'Michele']\n"
+     ]
+    }
+   ],
    "source": [
     "# Solve problem here:\n",
     "\n",
-    "names = [\"Michele\", \"Robin\", \"Sara\", \"Michele\"]\n"
+    "names = [\"Michele\", \"Robin\", \"Sara\", \"Michele\"]\n",
+    "length = len(names)\n",
+    "for name in range(length):\n",
+    "    for duplicate in range(name, length):\n",
+    "        if names[name] == names[duplicate]:\n",
+    "            names.pop(duplicate)\n",
+    "            break\n",
+    "    break\n",
+    "print(names)\n",
+    "        \n"
    ]
   },
   {
@@ -164,12 +244,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 25]\n"
+     ]
+    }
+   ],
    "source": [
     "# Solve problem here:\n",
-    "input_list = [5, 10, 99, 20, 25]"
+    "input_list = [5, 10, 99, 20, 25]\n",
+    "new_list = []\n",
+    "new_list.append(input_list[0])\n",
+    "new_list.append(input_list[-1])\n",
+    "print(new_list)"
    ]
   },
   {
@@ -189,24 +281,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-10-ca9e2b626fbd>, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-ca9e2b626fbd>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Solve Problem here:\n",
     "\n",
     "def your_function(a, b, c):\n",
     "    # Fill in your code below and return max value of a, b, c\n",
-    "    "
+    "    new_list = [a,b,c]\n",
+    "    return max(new_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "500\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test to see if your function works properly.\n",
+    "print(your_function(1, 5, 10))\n",
+    "print(your_function(-1,500,22))"
    ]
   },
   {
@@ -214,10 +318,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Test to see if your function works properly.\n",
-    "your_function(1, 5, 10)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
