[ corrected problem with duplicates and corrected me using max() on the last problem]

--- a/week-02/Exercise.ipynb
+++ b/week-02/Exercise.ipynb
@@ -202,30 +202,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Robin', 'Sara', 'Michele']\n"
+      "{'Sara', 'Robin', 'Michele'}\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "' old bad way\\nlength = len(names)\\nfor name in range(length):\\n    for duplicate in range(name, length):\\n        if names[name] == names[duplicate]:\\n            names.pop(duplicate)\\n            break\\n    break\\nprint(names)\\n'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Solve problem here:\n",
     "\n",
     "names = [\"Michele\", \"Robin\", \"Sara\", \"Michele\"]\n",
-    "length = len(names)\n",
-    "for name in range(length):\n",
-    "    for duplicate in range(name, length):\n",
-    "        if names[name] == names[duplicate]:\n",
-    "            names.pop(duplicate)\n",
-    "            break\n",
-    "    break\n",
+    "names = set(names)\n",
     "print(names)\n",
-    "        \n"
+    "     \n"
    ]
   },
   {
@@ -281,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,12 +294,16 @@
     "def your_function(a, b, c):\n",
     "    # Fill in your code below and return max value of a, b, c\n",
     "    new_list = [a,b,c]\n",
-    "    return max(new_list)"
+    "    largest = a\n",
+    "    for num in range(len(new_list)):\n",
+    "        if largest < new_list[num]:\n",
+    "            largest = new_list[num]\n",
+    "    return largest"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -303,14 +311,16 @@
      "output_type": "stream",
      "text": [
       "10\n",
-      "500\n"
+      "500\n",
+      "5\n"
      ]
     }
    ],
    "source": [
     "# Test to see if your function works properly.\n",
     "print(your_function(1, 5, 10))\n",
-    "print(your_function(-1,500,22))"
+    "print(your_function(-1,500,22))\n",
+    "print(your_function(5,4,2))"
    ]
   },
   {
