[week 3 hw complete]

--- a/week-03/Exercise.ipynb
+++ b/week-03/Exercise.ipynb
@@ -12,10 +12,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2022-08-09 23:23:07'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from time import gmtime, strftime\n",
+    "strftime(\"%Y-%m-%d %H:%M:%S\",gmtime())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -27,10 +41,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.28"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def area_of_circle(radius):\n",
+    "    pi = 3.14\n",
+    "    return pi * radius\n",
+    "\n",
+    "area_of_circle(2)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -46,10 +77,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def have_duplicates(input_list):\n",
+    "    dup_list = set(input_list)\n",
+    "    if len(input_list) == len(dup_list):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "print(have_duplicates([2,4,5,5,7,9]))\n",
+    "print(have_duplicates([1,2,3]))\n",
+    "print(have_duplicates([]))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -65,11 +116,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_items([('D', 74), ('W', 63), ('A', 211), ('Y', 44), ('N', 165), ('E', 274), (' ', 522), ('M', 77), ('I', 185), ('C', 60), ('H', 122), ('L', 126), ('R', 152), ('T', 180), ('J', 8), ('.', 26), ('(', 12), ('B', 59), ('O', 145), ('S', 152), ('P', 39), ('2', 24), ('7', 7), (',', 37), ('1', 28), ('9', 16), ('8', 6), (')', 12), ('[', 14), (']', 14), ('K', 13), ('F', 44), ('G', 53), ('X', 5), ('U', 66), ('V', 20), ('3', 2), ('4', 4), ('5', 5), ('6', 3), ('0', 36), ('\\n', 6), ('-', 6), (';', 1), ('!', 1), ('Â', 1), ('€', 1), ('”', 1)])\n"
+     ]
+    }
+   ],
    "source": [
-    "\n"
+    "characters ={}\n",
+    "import os\n",
+    "filename = os.path.join(os.getcwd(),\"data\")\n",
+    "path = open(filename + '/lil-wayne.txt', mode='r')\n",
+    "file = path.read()\n",
+    "file = file.upper()\n",
+    "\n",
+    "for keys in range(len(file)):\n",
+    "    if file[keys] not in characters:\n",
+    "        characters.update({file[keys]:1})\n",
+    "    else:\n",
+    "        values = characters.get(file[keys])\n",
+    "        characters.update({file[keys]:values+1})\n",
+    "print(characters.items())"
    ]
   },
   {
@@ -81,10 +153,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[' ', 522], ['E', 274], ['A', 211], ['I', 185], ['T', 180], ['N', 165], ['R', 152], ['S', 152], ['O', 145], ['L', 126], ['H', 122], ['M', 77], ['D', 74], ['U', 66], ['W', 63], ['C', 60], ['B', 59], ['G', 53], ['Y', 44], ['F', 44], ['P', 39], [',', 37], ['0', 36], ['1', 28], ['.', 26], ['2', 24], ['V', 20], ['9', 16], [']', 14], ['[', 14], ['K', 13], ['(', 12], [')', 12], ['J', 8], ['7', 7], ['8', 6], ['\\n', 6], ['-', 6], ['5', 5], ['X', 5], ['4', 4], ['6', 3], ['3', 2], [';', 1], ['!', 1], ['Â', 1], ['€', 1], ['”', 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "keylist = []\n",
+    "for key , value in characters.items():\n",
+    "    keylist.append([key,value])\n",
+    "\n",
+    "    \n",
+    "length = len(keylist)\n",
+    "for i in range(length):\n",
+    "    for j in range(i,length):\n",
+    "        if keylist[i][1] < keylist[j][1]:\n",
+    "            keylist[i] , keylist[j] = keylist[j] , keylist[i]\n",
+    "print(keylist)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -104,11 +196,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 2, 5, 8, 13, 21, 63]\n"
+     ]
+    }
+   ],
    "source": [
-    "list1 = [1, 1, 2, 3, 5, 8, 13, 21]"
+    "list1 = [1, 1, 2, 3, 5, 8, 13, 21]\n",
+    "fourth = list1.pop(3)\n",
+    "list1.append(fourth*list1[-1])\n",
+    "print(list1)"
    ]
   },
   {
@@ -123,11 +226,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 6, 9, 15, 21]\n"
+     ]
+    }
+   ],
    "source": [
-    "original_list = [2, 3, 6, 8, 9, 15, 19, 21]"
+    "original_list = [2, 3, 6, 8, 9, 15, 19, 21]\n",
+    "new_list = []\n",
+    "for i in range(len(original_list)):\n",
+    "    if original_list[i] % 3 == 0:\n",
+    "        new_list.append(original_list[i])\n",
+    "print(new_list)"
    ]
   },
   {
@@ -139,11 +255,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[21, 19, 15, 9, 8, 6, 3, 2]\n"
+     ]
+    }
+   ],
    "source": [
-    "original_list = [2, 3, 6, 8, 9, 15, 19, 21]"
+    "original_list = [2, 3, 6, 8, 9, 15, 19, 21]\n",
+    "original_list.reverse()\n",
+    "print(original_list)"
    ]
   },
   {
@@ -157,11 +283,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25, 36, 49]\n"
+     ]
+    }
+   ],
    "source": [
-    "original_list = [1, 2, 3, 4, 5, 6, 7]\n"
+    "original_list = [1, 2, 3, 4, 5, 6, 7]\n",
+    "new_list = []\n",
+    "for num in range(len(original_list)):\n",
+    "    new_list.append(original_list[num]*original_list[num])\n",
+    "print(new_list)"
    ]
   },
   {
@@ -186,12 +324,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 400\n",
+      "20 300\n",
+      "30 200\n",
+      "40 100\n"
+     ]
+    }
+   ],
    "source": [
     "list1 = [10, 20, 30, 40]\n",
-    "list2 = [100, 200, 300, 400]"
+    "list2 = [100, 200, 300, 400]\n",
+    "list2.reverse()\n",
+    "for i in range(len(list1)):\n",
+    "    print(list1[i],list2[i])"
    ]
   },
   {
@@ -206,11 +358,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['I', 'love', 'data', 'science', '!']\n"
+     ]
+    }
+   ],
    "source": [
-    "list_of_strings = ['I', 'love', '', '', 'data', '', 'science', '!']\n"
+    "list_of_strings = ['I', 'love', '', '', 'data', '', 'science', '!']\n",
+    "while '' in list_of_strings:\n",
+    "    list_of_strings.remove('')\n",
+    "print(list_of_strings)"
    ]
   },
   {
@@ -226,11 +389,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "sample_dict = {'a': 100, 'b': 999, 'c': 300}\n"
+    "sample_dict = {'a': 100, 'b': 999, 'c': 300}\n",
+    "if 999 in sample_dict.values():\n",
+    "    print('True')\n",
+    "else:\n",
+    "    print('False')"
    ]
   },
   {
@@ -249,11 +424,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 152,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>passengerid</th>\n",
+       "      <th>survived</th>\n",
+       "      <th>pclass</th>\n",
+       "      <th>name</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>age</th>\n",
+       "      <th>sibsp</th>\n",
+       "      <th>parch</th>\n",
+       "      <th>ticket</th>\n",
+       "      <th>fare</th>\n",
+       "      <th>cabin</th>\n",
+       "      <th>embarked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Braund, Mr. Owen Harris</td>\n",
+       "      <td>male</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A/5 21171</td>\n",
+       "      <td>7.2500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
+       "      <td>female</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PC 17599</td>\n",
+       "      <td>71.2833</td>\n",
+       "      <td>C85</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Heikkinen, Miss. Laina</td>\n",
+       "      <td>female</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>STON/O2. 3101282</td>\n",
+       "      <td>7.9250</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
+       "      <td>female</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>113803</td>\n",
+       "      <td>53.1000</td>\n",
+       "      <td>C123</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Allen, Mr. William Henry</td>\n",
+       "      <td>male</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>373450</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   passengerid  survived  pclass  \\\n",
+       "0            1         0       3   \n",
+       "1            2         1       1   \n",
+       "2            3         1       3   \n",
+       "3            4         1       1   \n",
+       "4            5         0       3   \n",
+       "\n",
+       "                                                name     sex   age  sibsp  \\\n",
+       "0                            Braund, Mr. Owen Harris    male  22.0      1   \n",
+       "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
+       "2                             Heikkinen, Miss. Laina  female  26.0      0   \n",
+       "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
+       "4                           Allen, Mr. William Henry    male  35.0      0   \n",
+       "\n",
+       "   parch            ticket     fare cabin embarked  \n",
+       "0      0         A/5 21171   7.2500   NaN        S  \n",
+       "1      0          PC 17599  71.2833   C85        C  \n",
+       "2      0  STON/O2. 3101282   7.9250   NaN        S  \n",
+       "3      0            113803  53.1000  C123        S  \n",
+       "4      0            373450   8.0500   NaN        S  "
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "df = pd.read_csv(filepath_or_buffer ='data/titanic.csv')\n",
+    "df.head()\n"
    ]
   },
   {
@@ -265,10 +585,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 142,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "29.699117647058323\n"
+     ]
+    }
+   ],
+   "source": [
+    "average = df['age'].mean()\n",
+    "print(average)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -279,10 +610,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 151,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>passengerid</th>\n",
+       "      <th>survived</th>\n",
+       "      <th>pclass</th>\n",
+       "      <th>name</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>age</th>\n",
+       "      <th>sibsp</th>\n",
+       "      <th>parch</th>\n",
+       "      <th>ticket</th>\n",
+       "      <th>fare</th>\n",
+       "      <th>cabin</th>\n",
+       "      <th>embarked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Braund, Mr. Owen Harris</td>\n",
+       "      <td>male</td>\n",
+       "      <td>29.699118</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A/5 21171</td>\n",
+       "      <td>7.250</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>587</th>\n",
+       "      <td>588</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Frolicher-Stehli, Mr. Maxmillian</td>\n",
+       "      <td>male</td>\n",
+       "      <td>29.699118</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13567</td>\n",
+       "      <td>79.200</td>\n",
+       "      <td>B41</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>588</th>\n",
+       "      <td>589</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Gilinski, Mr. Eliezer</td>\n",
+       "      <td>male</td>\n",
+       "      <td>29.699118</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14973</td>\n",
+       "      <td>8.050</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>589</th>\n",
+       "      <td>590</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Murdlin, Mr. Joseph</td>\n",
+       "      <td>male</td>\n",
+       "      <td>29.699118</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A./5. 3235</td>\n",
+       "      <td>8.050</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>590</th>\n",
+       "      <td>591</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Rintamaki, Mr. Matti</td>\n",
+       "      <td>male</td>\n",
+       "      <td>29.699118</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>STON/O 2. 3101273</td>\n",
+       "      <td>7.125</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     passengerid  survived  pclass                              name   sex  \\\n",
+       "0              1         0       3           Braund, Mr. Owen Harris  male   \n",
+       "587          588         1       1  Frolicher-Stehli, Mr. Maxmillian  male   \n",
+       "588          589         0       3             Gilinski, Mr. Eliezer  male   \n",
+       "589          590         0       3               Murdlin, Mr. Joseph  male   \n",
+       "590          591         0       3              Rintamaki, Mr. Matti  male   \n",
+       "\n",
+       "           age  sibsp  parch             ticket    fare cabin embarked  \n",
+       "0    29.699118      1      0          A/5 21171   7.250   NaN        S  \n",
+       "587  29.699118      1      1              13567  79.200   B41        C  \n",
+       "588  29.699118      0      0              14973   8.050   NaN        S  \n",
+       "589  29.699118      0      0         A./5. 3235   8.050   NaN        S  \n",
+       "590  29.699118      0      0  STON/O 2. 3101273   7.125   NaN        S  "
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sort = df.sort_values('age')\n",
+    "sort.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -301,7 +771,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -315,7 +785,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
