--- a/week-04/Exercise.ipynb
+++ b/week-04/Exercise.ipynb
@@ -10,14 +10,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 5, 8, 13]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a = [1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89]\n",
     "b = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]\n",
     "\n",
-    "\n"
+    "\n",
+    "list(set(a).intersection(b))\n"
    ]
   },
   {
@@ -37,10 +49,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Player 1 Choose: Scissors\n",
+      "Player 2 Choose: Paper\n",
+      "Player 1 Wins\n",
+      "Congratulations\n"
+     ]
+    }
+   ],
+   "source": [
+    "player1 = input(\"Player 1 Choose: \").title()\n",
+    "player2 = input(\"Player 2 Choose: \").title()\n",
+    "r = \"Rock\"\n",
+    "s = \"Scissors\"\n",
+    "p = \"Paper\"\n",
+    "\n",
+    "if player1 == player2:\n",
+    "    print(\"Tie\")\n",
+    "else:\n",
+    "    if player1 == r and player2 == s:\n",
+    "        print(\"Player 1 Wins\")\n",
+    "    elif player1 == s and player2 == r:\n",
+    "        print(\"Player 2 Wins\")\n",
+    "    elif player1 == r and player2 == p:\n",
+    "        print(\"Player 2 Wins\")\n",
+    "    elif player1 == p and player2 == r:\n",
+    "        print(\"Player 1 Wins\")\n",
+    "    elif player1 == s and player2 == p:\n",
+    "        print(\"Player 1 Wins\")\n",
+    "    elif player1 == p and player2 == s:\n",
+    "        print(\"Player 2 Wins\")\n",
+    "print(\"Congratulations\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -53,10 +99,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tacocat\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "palindrome = input()\n",
+    "check = palindrome[::-1]\n",
+    "print(palindrome)\n",
+    "if palindrome == check:\n",
+    "    print(\"True\")\n",
+    "else:\n",
+    "    print(\"False\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -68,12 +131,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter how long your password should be 10\n",
+      "8TvkiRH)vZ\n"
+     ]
+    }
+   ],
    "source": [
+    "import random\n",
+    "import string\n",
     "chars = \"abcdefghijklmnopqrstuvwxyz01234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^&*()?\"\n",
-    "\n",
+    "length = input(\"Enter how long your password should be \")\n",
+    "password = []\n",
+    "for i in range(int(length)):\n",
+    "    char = password.append(random.choice(chars))\n",
+    "    \n",
+    "print(\"\".join(password))\n",
     "\n",
     "\n"
    ]
@@ -89,10 +168,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 13, 26]\n",
+      "[]\n",
+      "[]\n",
+      "[1, 2, 4, 5, 10, 20, 25, 50, 100]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 4, 5, 10, 20, 25, 50, 100]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def Divisors_Solutions(num=0):\n",
+    "    Divisors = []\n",
+    "    for i in range(1,num + 1):\n",
+    "        if num % i == 0:\n",
+    "            Divisors.append(i)\n",
+    "    print(Divisors)\n",
+    "    return Divisors\n",
+    "Divisors_Solutions(26)\n",
+    "Divisors_Solutions(0)\n",
+    "Divisors_Solutions()\n",
+    "Divisors_Solutions(100)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -111,12 +223,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ktten\n",
+      "itten\n",
+      "kittn\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'kittn'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def missing_char(word, n):\n",
-    "    return('something')"
+    "    word = word.split(word[n]) # split the string by the one character\n",
+    "    word = \"\".join(word) # turn it back into a string\n",
+    "    print(word)\n",
+    "    return word\n",
+    "\n",
+    "missing_char('kitten', 1) \n",
+    "missing_char('kitten', 0)\n",
+    "missing_char('kitten', 4)"
    ]
   },
   {
@@ -136,11 +275,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[25, 25, 25, 50, 50, 75, 100, 100]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "54.166666666666664"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "example_list = [100, 100, 50, 75, 50, 25, 25, 25]\n"
+    "import math\n",
+    "def centered_average(example_list):\n",
+    "    example_list.sort() # sort list\n",
+    "    example_list.pop(0) # pop smallest\n",
+    "    example_list.pop(-1) # pop largest\n",
+    "    return sum(example_list) / len(example_list)\n",
+    "print(example_list)\n",
+    "centered_average([100, 100, 50, 75, 50, 25, 25, 25])"
    ]
   },
   {
@@ -153,7 +317,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -167,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
